--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {},
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -r build && mkdir build && cp -r node_modules index.js package* build && cd build && zip -r packakage.zip ./*"
   },
   "repository": {
     "type": "git",
